# copilot_aqualib

./: .gitignore  .gitmodules  README.md  aqualib.yaml.example  prompt_v2.md  pyproject.toml
examples/: aqualib.yaml  basic_usage.py
src/aqualib/: __init__.py  api.py  bootstrap.py  cli.py  config.py
src/aqualib/core/: __init__.py  agent_base.py  executor.py  message.py  orchestrator.py  reviewer.py  searcher.py
src/aqualib/rag/: __init__.py  indexer.py  retriever.py
src/aqualib/sdk/: __init__.py  agents.py  client.py  hooks.py  session_manager.py  system_prompt.py
src/aqualib/skills/: __init__.py  loader.py  registry.py  scanner.py  skill_base.py  skill_meta.py  tool_adapter.py
src/aqualib/skills/clawbio/: __init__.py  skills.py
src/aqualib/utils/: __init__.py  logging.py
src/aqualib/workspace/: __init__.py  manager.py
tests/: __init__.py  test_agent_memory.py  test_chat.py  test_clawbio_skills.py  test_config.py  test_loader.py  test_message.py  test_orchestrator.py  test_plan_workflow.py  test_rag_auto.py  test_registry.py  test_sdk_config.py  test_sdk_hooks.py  test_sdk_tools.py  test_sessions.py  test_vendor_loading.py  test_workspace.py
