[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqualib"
version = "0.2.0"
description = "AquaLib – Multi-agent framework built on GitHub Copilot SDK with vendor skill priority, SKILL.md-driven skills, and workspace-isolated audit trails."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AquaLib Team" },
]
keywords = ["agent", "llm", "copilot", "vendor-skills", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "github-copilot-sdk>=0.1.0",
    "pydantic>=2.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
rag = [
    "openai>=1.14.0",
    "llama-index-core>=0.11.0",
    "llama-index-embeddings-openai>=0.2.0",
]
api = [
    "uvicorn>=0.27.0",
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
    "uvicorn>=0.27.0",
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
]

[project.scripts]
aqualib = "aqualib.cli:app"
aqualib-api = "aqualib.api:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/aqualib"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
